--- a/style.css
+++ b/style.css
@@ -2,9 +2,24 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    user-select: none;
-    -webkit-user-select: none;
+}
+
+/* [НОВОЕ] Глобальное отключение системных взаимодействий */
+body, canvas {
+    /* Запрет выделения текста */
+    -webkit-user-select: none; /* Safari, Chrome */
+    -moz-user-select: none;    /* Firefox */
+    -ms-user-select: none;     /* IE/Edge */
+    user-select: none;         /* Standard */
+
+    /* Отключение контекстного меню (Callout) на iOS - критично для игр */
+    -webkit-touch-callout: none;
+
+    /* Отключение синей подсветки нажатия на Android/iOS */
     -webkit-tap-highlight-color: transparent;
+    
+    /* Запрет перетаскивания изображений (на всякий случай) */
+    -webkit-user-drag: none;
 }
 
 html, body {
@@ -41,6 +56,7 @@ canvas {
     display: block;
     width: 100%;
     height: 100%;
+    touch-action: none; /* Дополнительная защита от скролла */
 }
 
 #ui-container {
@@ -62,7 +78,6 @@ canvas {
     opacity: 0.9;
 }
 
-/* [ИЗМЕНЕНИЕ] Стили для High Score */
 #high-score-container {
     position: absolute;
     top: 25px;
@@ -80,7 +95,7 @@ canvas {
 .trophy-icon {
     width: 28px;
     height: 28px;
-    stroke: #aeaeae; /* Серый цвет обводки */
+    stroke: #aeaeae;
     margin-right: 8px;
 }
 
