--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ html, body {
     left: 0;
     touch-action: none; 
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Arial, sans-serif;
-    background-color: #1a1a1a; 
+    background-color: #022027; 
     display: flex;
     justify-content: center;
     align-items: center;
@@ -36,7 +36,7 @@ html, body {
     height: 100%;
     max-width: 450px; 
     max-height: 850px;
-    background: linear-gradient(to bottom, #2a2c2c, #353838 50%, #2a2c2c);
+    background:  #022027;
     overflow: hidden;
     box-shadow: 0 0 50px rgba(0,0,0,0.5);
     overscroll-behavior: none;
@@ -113,7 +113,7 @@ canvas {
     left: 0;
     width: 100%;
     height: 100%;
-    background: linear-gradient(to bottom, #1e2020, #2a2c2c);
+    background: #022027;
     z-index: 100;
     display: flex;
     flex-direction: column;
@@ -149,7 +149,7 @@ canvas {
     align-items: center;
     justify-content: center;
     margin-bottom: 40px;
-    background: rgba(255,255,255,0.05);
+    background:  #022027;
     padding: 10px 20px;
     border-radius: 20px;
 }
@@ -169,7 +169,7 @@ canvas {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: #2a2c2c; 
+    background-color: #022027; 
     display: flex;
     flex-direction: column;
     justify-content: center;
